@@ -1,5 +1,6 @@
 
 0.9.9c Oct 03, 2004
+ * added support for debian style "or" conditional in slack-required
  * moved clean_pkg_dir() from configuration.[ch] to package.[ch]
  * fixed null short description from printing "null", prints "" instead
  * updated man page
